--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Calculates the ranking of the English Premier League teams",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "jest"
   },
   "author": "siansrd",
   "license": "ISC",
